trocar de informação dos produtos

--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
         </thead>
         <tbody>
             <tr>
-                <td>Produto 1</td>
+                <td>Camiseta</td>
                 <td>2</td>
                 <td>$5</td>
                 <td rowspan="2">SIM</td>
             </tr>
             <tr>
-                <td>Produto 2</td>
+                <td>Bermuda</td>
                 <td>5</td>
                 <td>$10</td>
             </tr>
             <tr>
-                <td>Produto 3</td>
+                <td>Calça</td>
                 <td>3</td>
                 <td>$15</td>
                 <td>NÃO</td>
