troca de informação da calça

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <td>$25</td>
             </tr>
             <tr>
-                <td>Calça</td>
+                <td>Calça Jeans</td>
                 <td>3</td>
                 <td>$150</td>
                 <td>NÃO</td>
